--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <main id="main">
     <h1 id="title">Dr. Norman Borlaug</h1>
     <p>The man who saved a billion lives</p>
-    <img id="img-div">
-      <img scr=" "
-        id="image">
-     
+    <!-- <img id="img-div"> -->
+     <div>
+      <img scr="pc22.webp">
+     </div>
       <caption id="img-caption">
         Dr. Norman Borlaug, third from the left, trains biologists in Mexico on
         how to increase wheat yields - part of his life-long war on hunger.
