--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-  <script src='main.js'></script>
+  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+  
 </head>
 <body>
   <main id="main">
     <h1 id="title">Dr.Agnes</h1>
-    <p>The man who saved a billion lives</p>
-    <figure id="img-div">
-      <img src="./image3.jpg" alt="">
-      <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
-    </figure>
-<div id="tribute-info">
-  <p>Here's a time line of Dr. Borlaug's life:</p>
-  <ul>
+    <p class="caption">The man who saved a billion lives</p>
+    <div id="img-div">
+      <figure>
+        <img id="image" src="./image3.jpg" alt="">
+        <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
+      </figure>
+    </div>
+<section id="tribute-info">
+  <h2>Here's a time line of Dr. Borlaug's life:</h2>
+  <ul class="unordered">
     <li>
-    <strong>1933 - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration" </strong>
+    <strong>1933 </strong>- Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"
     </li>
     <li>
-      <strong>1935 - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me</strong>
+      <strong>1935 </strong>- Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me
     </li>
     <li>
-    </strong> 1937 - Finishes university and takes a job in the US Forestry Service
-  </strong>
+    </strong> 1937</strong> - Finishes university and takes a job in the US Forestry Service
+  
     </li>
     <li>
   <strong>1938 - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.
@@ -46,48 +48,52 @@
   </strong>
 </li>
 <li>
-  <strong>1945 - Discovers a way to grown wheat twice each season, doubling wheat yields
+  <strong>1945 
+  </strong>- Discovers a way to grown wheat twice each season, doubling wheat yields
 
-  </strong>
 </li>
 <li>
   
-<strong>1953- crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.
-</strong> 
+<strong>1953 </strong>- crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.
+ 
 </li>
 <li>
-  <strong>
-    1962 - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population
-  </strong>
+  <strong> 1962 </strong>- Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population
+ 
 </li>
 <li>
-  <strong>
-    1970 - receives the Nobel Peace Prize
-  </strong>
+  <strong>  1970</strong>
+    - receives the Nobel Peace Prize
+  
 </li>
 <li>
-  <strong>
-    1983 - helps seven African countries dramatically increase their maize and sorghum yields
-  </strong>
+  <strong>1983 </strong> - helps seven African countries dramatically increase their maize and sorghum yields
+
 </li>
 <li>
-  <strong>
-    1984 - becomes a distinguished professor at Texas A&M University
-  </strong>
+  <strong>1984   </strong>- becomes a distinguished professor at Texas A&M University
+
 </li>
 <li>
-  <strong>
-    2005 - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."
-  </strong>
+  <strong>2005  </strong>- states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."
+ 
 </li>
 <li>
-  <strong>
-    2009 - dies at the age of 95.
-  </strong>
+  <strong>2009 </strong>- dies at the age of 95.
+ 
 </li>
     </ul>
+<p id="healine">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+<p>-- Indian Prime Minister Manmohan Singh</p>
+<h3>
+  If you have time, you should read more about this incredible human being on his 
+  <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">wikipedia
 
+  </a>
+</h3>
+</section>
 </div>
+
   </main>
 </body>
 </html>
