--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   
     </li>
     <li>
-  <strong>1938 - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.
-</strong>
+  <strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.
 </li>
 <li>
   <strong>1941 - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.</strong>
@@ -84,7 +83,7 @@
 </li>
     </ul>
 <p id="healine">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
-<p>-- Indian Prime Minister Manmohan Singh</p>
+<p id="two">-- Indian Prime Minister Manmohan Singh</p>
 <h3>
   If you have time, you should read more about this incredible human being on his 
   <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">wikipedia
