--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='style1.css'>
   
 </head>
 <body>
@@ -14,7 +14,7 @@
     <p class="caption">The man who saved a billion lives</p>
     <div id="img-div">
       <figure>
-        <img id="image" src="./image3.jpg" alt="">
+        <img id="image" src="./norman1.jpg" alt="">
         <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
       </figure>
     </div>
@@ -35,20 +35,19 @@
   <strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.
 </li>
 <li>
-  <strong>1941 - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.</strong>
+  <strong>1941 </strong>- Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.
 </li>
 <li>
-  <strong>1942 - Receives a Ph.D. in Genetics and Plant Pathology
-  </strong>
+  <strong>1942  </strong>- Receives a Ph.D. in Genetics and Plant Pathology
+ 
 </li>
 <li>
-  <strong>1944 - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth.
+  <strong>1944  </strong>- Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth.
 
-  </strong>
+ 
 </li>
 <li>
-  <strong>1945 
-  </strong>- Discovers a way to grown wheat twice each season, doubling wheat yields
+  <strong>1945 </strong>- Discovers a way to grown wheat twice each season, doubling wheat yields
 
 </li>
 <li>
